Use the same arguments for the constructors of TaskTracker and TaskTrackerPosix.

This is required because both classes are used interchangeably by
TaskSchedulerImpl (cf.
https://cs.chromium.org/chromium/src/base/task_scheduler/task_scheduler_impl.h?l=46&rcl=14b157142ce0febc22c1bd836f7d8ccdc2931e81)

Bug: 726937
Change-Id: Ia82edbb446b44551fd579b4ebc63be9c94682e62
Reviewed-on: https://chromium-review.googlesource.com/912097
Commit-Queue: François Doray <fdoray@chromium.org>
Reviewed-by: Robert Liao <robliao@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536162}