base/task_scheduler/task_tracker_posix.h
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef BASE_TASK_SCHEDULER_TASK_TRACKER_POSIX_H_
 #define BASE_TASK_SCHEDULER_TASK_TRACKER_POSIX_H_
 
+#include <limits>
 #include <memory>
 
 #include "base/base_export.h"
@@ -28,7 +29,10 @@ struct Task;
 // TaskTracker can run tasks.
 class BASE_EXPORT TaskTrackerPosix : public TaskTracker {
  public:
-  TaskTrackerPosix(StringPiece name);
+  // This must match the signature of TaskTracker() to allow interchangeability.
+  TaskTrackerPosix(StringPiece name,
+                   int max_num_scheduled_background_sequences =
+                       std::numeric_limits<int>::max());
   ~TaskTrackerPosix() override;
 
   // Sets the MessageLoopForIO with which to setup FileDescriptorWatcher in the
